--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="password">Password</string>
     <string name="login">Login</string>
     <string name="payout">payout</string>
+    <string name="there_is_no_data_to_display">there is no data to display</string>
 </resources>
